--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,8 @@
     <string name="restaurants">Restaurants</string>
     <string name="cafes">Cafes</string>
     <string name="send">Send</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="map_view">Map View</string>
+    <string name="contact">Contact</string>
+    <string name="send_email">Send email</string>
 </resources>
