UI updates. Part 3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,4 +56,6 @@
     <string name="map_view">Map View</string>
     <string name="contact">Contact</string>
     <string name="send_email">Send email</string>
+    <string name="photos">Photos</string>
+    <string name="videos">Videos</string>
 </resources>
